<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lunar_robot_description</name>
  <version>1.0.0</version>
  <description>URDF description and configuration files for the lunar robot</description>
  
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>rviz2</depend>
  <depend>xacro</depend>
  
  <!-- ROS2 Control dependencies -->
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>controller_manager</depend>
  <depend>skid_steer_drive_controller</depend>
  <depend>joint_state_broadcaster</depend>
  
  <!-- Gazebo dependencies -->
  <depend>gazebo_ros2_control</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>