<?xml version="1.0"?>
<package format="3">
  <name>lunar_robot_hardware</name>
  <version>1.0.0</version>
  <description>Real hardware interface for lunar rover</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>realsense2_camera</depend>
  <depend>usb_cam</depend>
  
  <exec_depend>python3-serial</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>